--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@xterm/xterm": "^5.5.0",
+    "ws": "^8.18.0"
+  }
 }
